--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
 	},
 	"license": "MIT",
 	"author": {
-		"name": "Josh Goldberg",
-		"email": "npm@joshuakgoldberg.com"
+		"name": "WumaCoder",
+		"email": "1829913225@qq.com"
 	},
 	"type": "module",
-	"main": "./lib/index.js",
+	"exports": {
+		".": {
+			"import": "./dist/diff-review.js",
+			"require": "./dist/diff-review.umd.cjs"
+		}
+	},
+	"main": "./dist/diff-review.umd.cjs",
+	"module": "./dist/diff-review.js",
 	"files": [
 		"bin/",
 		"lib/",
@@ -21,7 +28,7 @@
 		"README.md"
 	],
 	"scripts": {
-		"build": "tsc",
+		"build": "vite build",
 		"format": "prettier \"**/*\" --ignore-unknown",
 		"format:write": "pnpm format --write",
 		"lint": "eslint . .*js --max-warnings 0 --report-unused-disable-directives",
@@ -36,6 +43,9 @@
 	},
 	"lint-staged": {
 		"*": "prettier --ignore-unknown --write"
+	},
+	"dependencies": {
+		"vite": "^4.4.8"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.37.0",
