--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"types": ["vitest/globals"],
 		"target": "ES2022"
 	},
 	"include": ["src"]
