--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.37.0",
+		"@types/node": "^20.4.8",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"@vitest/coverage-istanbul": "^0.33.0",
