--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,8 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"types": ["vitest/globals"],
-		"target": "ES2022"
+		"target": "ES2022",
+		"types": ["vitest/globals"]
 	},
 	"include": ["src"]
 }
